<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.productivity.tasklistmanagerpro.launcher.MainActivity" >

    <LinearLayout
        android:id="@+id/titlebargroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/appname"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.81"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/textclock" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.52"
        style="@android:style/Theme.Holo.Light.DarkActionBar"
        android:clickable="true" >
    </ListView>

    <LinearLayout
        android:id="@+id/itemcountgroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/totalitems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_items_" />

        <TextView
            android:id="@+id/totalchecked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_checked_" />

        <TextView
            android:id="@+id/totalHigh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_high_" />

        <TextView
            android:id="@+id/totalMed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_medium_" />

        <TextView
            android:id="@+id/totalLow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_low_" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputfieldgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/priorityspinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/inputfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_task_details_here_click_add_to_add_to_list_"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/overwrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overwrite" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_done" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all" />
    </LinearLayout>

</LinearLayout>