<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/settingsforautodelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/preferencestext"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="5"
            android:text="@string/enable_auto_delete_this_option_allows_the_app_to_automatically_delete_marked_checked_items_on_exit_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/enabledisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/maxchargroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/charlimitinfo"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".7"
            android:text="@string/drag_the_seekbar_on_the_right_to_change_the_maximum_number_of_characters_to_be_displayed_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/currentlimit"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".3"
            android:text="Current Limit is:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/charlimiterseekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="200" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tempgroup"
        android:layout_width="match_parent"
        android:layout_height="400dp" >

        <TextView
            android:id="@+id/filnameinfo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/name_of_text_file_to_import_and_export_enter_the_name_of_the_filename_that_will_be_exported_from_the_app_the_same_will_be_used_to_import_a_prepared_text_file_containing_tasks_to_populate_the_listview_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/filenameinputfield"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/saveandexitgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp" >

        <Button
            android:id="@+id/savepreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_and_exit" />
    </LinearLayout>

</LinearLayout>